kubernetes/istio/canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gelatomania-api-canary
spec:
  hosts:
  - gelatomania-api
  http:
  - route:
    - destination:
        host: gelatomania-api
        subset: v1
      weight: 80
    - destination:
        host: gelatomania-api
        subset: v2
      weight: 20
