kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gelatomania-gateway
spec:
  selector:
    istio: ingressgateway # Usa o gateway padrão do Istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Aceita tráfego de qualquer host
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gelatomania-vs
spec:
  hosts:
  - "*"
  gateways:
  - gelatomania-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: gelatomania-api
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: gelatomania-frontend
        port:
          number: 80
